--- a/arch/arm64/boot/dts/renesas/draak.dtsi
+++ b/arch/arm64/boot/dts/renesas/draak.dtsi
@@ -356,10 +356,11 @@
 				 * CVBS and HDMI inputs through SW[49-53]
 				 * switches.
 				 *
-				 * HDMI is the default selection, leave CVBS
-				 * not connected here.
+				 * CVBS is the default selection, link it to
+				 * VIN4 here.
 				 */
 				adv7180_out: endpoint {
+					remote-endpoint = <&vin4_in>;
 				};
 			};
 		};
@@ -422,11 +423,13 @@
 				 * CVBS and HDMI inputs through SW[49-53]
 				 * switches.
 				 *
-				 * HDMI is the default selection, link it to
-				 * VIN4 here.
+				 * CVBS is the default selection, leave HDMI
+				 * not connected here.
 				 */
 				adv7612_out: endpoint {
-					remote-endpoint = <&vin4_in>;
+					pclk-sample = <0>;
+					hsync-active = <0>;
+					vsync-active = <0>;
 				};
 			};
 		};
@@ -577,8 +580,8 @@
 		function = "usb0";
 	};
 
-	vin4_pins: vin4 {
-		groups = "vin4_data24", "vin4_sync", "vin4_clk";
+	vin4_pins_cvbs: vin4 {
+		groups = "vin4_data8", "vin4_sync", "vin4_clk";
 		function = "vin4";
 	};
 };
@@ -726,7 +729,7 @@
 };
 
 &vin4 {
-	pinctrl-0 = <&vin4_pins>;
+	pinctrl-0 = <&vin4_pins_cvbs>;
 	pinctrl-names = "default";
 
 	status = "okay";
@@ -734,10 +737,7 @@
 	ports {
 		port {
 			vin4_in: endpoint {
-				pclk-sample = <0>;
-				hsync-active = <0>;
-				vsync-active = <0>;
-				remote-endpoint = <&adv7612_out>;
+				remote-endpoint = <&adv7180_out>;
 			};
 		};
 	};
